				 increased wideness of title                
				 
  Documentation: two new FAQ entries about stable releases and how to install patches
                 added documentation on how to install deltaclient on Linux  
                  
*******************************

15.4.2013
- bugfixes in install routine
- testing the key features of new release

8.4.2013 Patch 3 for 1.5.5: url fix for deltaclient

6.4.2013 
- changes to compile deltaclient on Linux (tested on Ubuntu Unity)
- actualizing client list and documentation
- windows deltaclient recompiled due to URL change
- deltaclient for Linux does not work on Debian Gnome, so recompiling on Debian and checking if Ubuntu Unity can do something with it
- Does not work on Ubuntu Unity, so decided to distribute both versions (and I should provide a KDE version as well...)

5.4.2013 Patch 2 for 1.5.5: patch_2_diff_colors.zip
- fixing the colored diff when comparing different script revisions

4.4.2013 git
- extending export_project_execution.php to produce XML with more fields. Adapting XSL definition.

3.4.2013 git
- heavy refactoring of utils.inc.php, splitting the file in several subfiles -> makes page loading much faster :-)
- extending export_project_execution.php to produce XML and HTML via XSLT (stylehseet added)
- docs: adding 3 FAQ question on project
- reorganizing links on main page
- raising next version to 1.6.0
- adding timing utils to time page generation. Timing several key pages

2.4.2013 git
- initial revision for export_project_execution.php

28.3.2013 git
- implementing form to export a project as XML or HTML (available only to project managers and administrators)
- removing old deltasql google gadget code

27.3.2013 git
- doubling wideness of field title in tbscript 

5.3.2013 git
Migrating stuff from GPU server:
- added sql2xml and xslt utils by Darko Bunic
- added some utils to retrieve params and create unique ids 

4.1.2013 Patch 1 for 1.5.5; patch_1_add_module_to_project.zip